testsuite/tests/grammar/invalid_error_node/test_derived/test.lkt
from common import FooNode, Example

class BaseErrorDecl: FooNode implements ErrorNode {
}

@synthetic class ErrorDecl: BaseErrorDecl {
}
